Fix alignment at heading

--- a/src/app/modules/user/components/add-hours/add-hours.component.scss
+++ b/src/app/modules/user/components/add-hours/add-hours.component.scss
@@ -28,6 +28,14 @@
 	}
 
 	&__date-picker {
+		display: inline-flex;
+
+		align-items: center;
+
+		cursor: pointer;
+	}
+
+	&__hidden-picker {
 		visibility: hidden;
 
 		width: 1px;
